# converge-wifi-manager

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  ENGINEERING.md  PROJECT_SPEC.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  cmake.yml  doxygen-pages.yml  release.yml
config/: config.example.json
docs/: API.md  ARCHITECTURE.md  BUILD.md  Doxyfile  ROADMAP.md  TESTING.md  router-discovery.md
include/cli/: CommandDispatcher.hpp
include/core/: Application.hpp
include/models/: AppConfig.hpp  Device.hpp  OperationResult.hpp  RouterInfo.hpp
include/network/: CurlHttpClient.hpp  HttpRequest.hpp  HttpResponse.hpp  IHttpClient.hpp  WinHttpClient.hpp
include/router/: IRouterClient.hpp  RouterFactory.hpp  ZteF670LRouterClient.hpp
include/services/: DeviceService.hpp
include/utils/: ConfigLoader.hpp  Logger.hpp
scripts/: build_linux.sh  build_termux.sh  clean.sh
src/: main.cpp
src/cli/: CommandDispatcher.cpp
src/core/: Application.cpp
src/network/: CurlHttpClient.cpp  WinHttpClient.cpp
src/router/: RouterFactory.cpp  ZteF670LRouterClient.cpp
src/services/: DeviceService.cpp
src/utils/: ConfigLoader.cpp  Logger.cpp
tests/: CMakeLists.txt  ConfigLoaderTests.cpp  DeviceServiceTests.cpp  HtmlParsingTests.cpp  LoggerTests.cpp  MockHttpClient.hpp  RouterClientTests.cpp
